--- a/FotoNunez/Pages/Index.razor
+++ b/FotoNunez/Pages/Index.razor
@@ -33,10 +33,11 @@
 
                     </div>
                     <div class="card-footer">
-                        <div class="form-group text-center">
-                            <a class="ml-md-auto btn btn-success"
+                        <div class="form-group">
+                            <a class="btn btn-success"
                                href="/login?paramUsername=@encode(Usuario)&paramPassword=@encode(Contrasena)"
                                target="_top">Login<span class="oi oi-account-login"></span></a>
+                            <a class="text-right" href="R_Usuarios">Register</a>
                         </div>
                     </div>
                 </div>
